--- a/XamarinMusicPlayer/XamarinMusicPlayer.Android/XamarinMusicPlayer.Android.csproj
+++ b/XamarinMusicPlayer/XamarinMusicPlayer.Android/XamarinMusicPlayer.Android.csproj
@@ -64,6 +64,9 @@
     <PackageReference Include="DLToolkit.Forms.Controls.FlowListView">
       <Version>2.0.11</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.Permissions">
+      <Version>6.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Xamarin.Forms.PancakeView">
