--- a/XamarinMusicPlayer/XamarinMusicPlayer/XamarinMusicPlayer.csproj
+++ b/XamarinMusicPlayer/XamarinMusicPlayer/XamarinMusicPlayer.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="AsyncAwaitBestPractices.MVVM" Version="4.3.0" />
     <PackageReference Include="DLToolkit.Forms.Controls.FlowListView" Version="2.0.11" />
+    <PackageReference Include="Plugin.Permissions" Version="6.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />  
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.1.0.714" />
